Corrected  ShowCompetitions, fixed query in shooter repository

--- a/ProjektSemestrIV/ProjektSemestrIV.csproj
+++ b/ProjektSemestrIV/ProjektSemestrIV.csproj
@@ -91,6 +91,7 @@
     <Compile Include="ViewModels\BaseClass\RelayCommand.cs" />
     <Compile Include="ViewModels\ScoreViewModel.cs" />
     <Compile Include="ViewModels\ShootersViewModel.cs" />
+    <Compile Include="ViewModels\ShowCompetitionsViewModel.cs" />
     <Compile Include="ViewModels\StagesViewModel.cs" />
     <Compile Include="Views\EditShootersView.xaml.cs">
       <DependentUpon>EditShootersView.xaml</DependentUpon>
@@ -106,6 +107,9 @@
     </Compile>
     <Compile Include="Views\ShootersView.xaml.cs">
       <DependentUpon>ShootersView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ShowCompetitionsView.xaml.cs">
+      <DependentUpon>ShowCompetitionsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\StagesView.xaml.cs">
       <DependentUpon>StagesView.xaml</DependentUpon>
@@ -139,6 +143,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\ShootersView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ShowCompetitionsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
