--- a/ProjektSemestrIV/ProjektSemestrIV.csproj
+++ b/ProjektSemestrIV/ProjektSemestrIV.csproj
@@ -78,8 +78,11 @@
     </ApplicationDefinition>
     <Compile Include="DAL\DatabaseConnection.cs" />
     <Compile Include="DAL\Entities\Shooter.cs" />
+    <Compile Include="DAL\Entities\Stage.cs" />
     <Compile Include="DAL\Repositories\ShooterRepository.cs" />
+    <Compile Include="DAL\Repositories\StageRepository.cs" />
     <Compile Include="Models\ShooterModel.cs" />
+    <Compile Include="Models\StageModel.cs" />
     <Compile Include="ViewModels\EditShootersViewModel.cs" />
     <Compile Include="DAL\Entities\Competition.cs" />
     <Compile Include="DAL\Repositories\CompetitionsRepository.cs" />
@@ -92,7 +95,7 @@
     <Compile Include="ViewModels\ScoreViewModel.cs" />
     <Compile Include="ViewModels\ShootersViewModel.cs" />
     <Compile Include="ViewModels\ShowCompetitionsViewModel.cs" />
-    <Compile Include="ViewModels\StagesViewModel.cs" />
+    <Compile Include="ViewModels\EditStagesViewModel.cs" />
     <Compile Include="Views\EditShootersView.xaml.cs">
       <DependentUpon>EditShootersView.xaml</DependentUpon>
     </Compile>
@@ -111,8 +114,8 @@
     <Compile Include="Views\ShowCompetitionsView.xaml.cs">
       <DependentUpon>ShowCompetitionsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\StagesView.xaml.cs">
-      <DependentUpon>StagesView.xaml</DependentUpon>
+    <Compile Include="Views\EditStagesView.xaml.cs">
+      <DependentUpon>EditStagesView.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -150,7 +153,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\StagesView.xaml">
+    <Page Include="Views\EditStagesView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
