--- a/ProjektSemestrIV/ProjektSemestrIV.csproj
+++ b/ProjektSemestrIV/ProjektSemestrIV.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -79,8 +79,12 @@
     <Compile Include="DAL\DatabaseConnection.cs" />
     <Compile Include="DAL\Entities\Shooter.cs" />
     <Compile Include="DAL\Entities\ShooterWithCompetitionTime.cs" />
+    <Compile Include="DAL\Entities\ShooterWithPoints.cs" />
     <Compile Include="DAL\Repositories\CompetitionRepository.cs" />
     <Compile Include="DAL\Repositories\ShooterRepository.cs" />
+    <Compile Include="DisplayModels\ShowCompetition\ShowCompetitionShooterModel.cs" />
+    <Compile Include="DisplayModels\ShowCompetition\ShowCompetitionStageModel.cs" />
+    <Compile Include="Extensions\IEnumerableExtension.cs" />
     <Compile Include="Models\ShooterModel.cs" />
     <Compile Include="Models\ShowCompetitionModel.cs" />
     <Compile Include="ViewModels\EditShootersViewModel.cs" />
