Added View, Viewmodel and  showModel for selected stage

--- a/ProjektSemestrIV/ProjektSemestrIV.csproj
+++ b/ProjektSemestrIV/ProjektSemestrIV.csproj
@@ -129,7 +129,9 @@
     <Compile Include="DAL\Entities\AuxiliaryEntities\ShooterWithPoints.cs" />
     <Compile Include="DAL\Entities\AuxiliaryEntities\ShooterWithCompetitionTime.cs" />
     <Compile Include="DAL\Entities\AuxiliaryEntities\StageWithBestShooter.cs" />
+    <Compile Include="Models\ComplexModels\ShowSelectedStageModel.cs" />
     <Compile Include="Models\ShowModels\ShooterWithPointsOverview.cs" />
+    <Compile Include="Models\ShowModels\ShooterWithStagePointsAndCompetitionPoints.cs" />
     <Compile Include="Models\ShowModels\StageWithBestPlayerOverview.cs" />
     <Compile Include="Extensions\IEnumerableExtension.cs" />
     <Compile Include="DAL\Repositories\CompetitionRepository.cs" />
@@ -160,6 +162,7 @@
     <Compile Include="ViewModels\EditShootersViewModel.cs" />
     <Compile Include="ViewModels\ShowCompetitionsViewModel.cs" />
     <Compile Include="ViewModels\ShowSelectedCompetitionViewModel.cs" />
+    <Compile Include="ViewModels\ShowSelectedStageViewModel.cs" />
     <Compile Include="ViewModels\ShowShootersViewModel.cs" />
     <Compile Include="ViewModels\ShowSelectedShooterViewModel.cs" />
     <Compile Include="Views\ShowSelectedCompetitionView.xaml.cs">
@@ -185,6 +188,9 @@
     </Compile>
     <Compile Include="Views\EditStagesView.xaml.cs">
       <DependentUpon>EditStagesView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ShowSelectedStageView.xaml.cs">
+      <DependentUpon>ShowSelectedStageView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ShowShootersView.xaml.cs">
       <DependentUpon>ShowShootersView.xaml</DependentUpon>
@@ -230,6 +236,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\EditStagesView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ShowSelectedStageView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
