--- a/ProjektSemestrIV/ProjektSemestrIV.csproj
+++ b/ProjektSemestrIV/ProjektSemestrIV.csproj
@@ -128,6 +128,7 @@
     </ApplicationDefinition>
     <Compile Include="DAL\DatabaseConnection.cs" />
     <Compile Include="DAL\Entities\AuxiliaryEntities\ShooterCompetition.cs" />
+    <Compile Include="DAL\Entities\AuxiliaryEntities\ShooterStatsOnStage.cs" />
     <Compile Include="DAL\Entities\AuxiliaryEntities\ShooterWithStagePointsAndCompetitionPoints.cs" />
     <Compile Include="DAL\Entities\Competition.cs" />
     <Compile Include="DAL\Entities\Run.cs" />
