--- a/ProjektSemestrIV/ProjektSemestrIV.csproj
+++ b/ProjektSemestrIV/ProjektSemestrIV.csproj
@@ -129,7 +129,7 @@
     <Compile Include="DAL\DatabaseConnection.cs" />
     <Compile Include="DAL\Entities\AuxiliaryEntities\ShooterCompetition.cs" />
     <Compile Include="DAL\Entities\AuxiliaryEntities\ShooterStatsOnStage.cs" />
-    <Compile Include="DAL\Entities\AuxiliaryEntities\ShooterWithStagePointsAndCompetitionPoints.cs" />
+    <Compile Include="DAL\Entities\AuxiliaryEntities\ShooterWithStageAndCompetitionPoints.cs" />
     <Compile Include="DAL\Entities\Competition.cs" />
     <Compile Include="DAL\Entities\IBaseEntity.cs" />
     <Compile Include="DAL\Entities\Run.cs" />
@@ -141,27 +141,27 @@
     <Compile Include="DAL\Entities\AuxiliaryEntities\StageWithBestShooter.cs" />
     <Compile Include="DAL\Repositories\BaseRepository.cs" />
     <Compile Include="Models\AccuracyTypeEnum.cs" />
-    <Compile Include="Models\ComplexModels\ShowSelectedShooterInCompetitionModel.cs" />
-    <Compile Include="Models\ComplexModels\ShowSelectedStageModel.cs" />
+    <Compile Include="Models\ComplexModels\ShowShooterInCompetitionModel.cs" />
+    <Compile Include="Models\ComplexModels\ShowStageModel.cs" />
     <Compile Include="Models\ComplexModels\ShowShooterOnStageModel.cs" />
     <Compile Include="Models\ShowModels\ShooterWithPointsOverview.cs" />
-    <Compile Include="Models\ShowModels\ShooterWithStagePointsAndCompetitionPointsOverview.cs" />
-    <Compile Include="Models\ShowModels\StageWithBestPlayerOverview.cs" />
+    <Compile Include="Models\ShowModels\ShooterWithStageAndCompetitionPointsOverview.cs" />
+    <Compile Include="Models\ShowModels\StageWithBestShooterOverview.cs" />
     <Compile Include="Extensions\IEnumerableExtension.cs" />
     <Compile Include="DAL\Repositories\CompetitionRepository.cs" />
     <Compile Include="DAL\Repositories\RunRepository.cs" />
     <Compile Include="DAL\Repositories\ShooterRepository.cs" />
     <Compile Include="DAL\Repositories\StageRepository.cs" />
     <Compile Include="DAL\Repositories\TargetRepository.cs" />
-    <Compile Include="Models\ComplexModels\ShowSelectedShooterModel.cs" />
+    <Compile Include="Models\ComplexModels\ShowShooterModel.cs" />
     <Compile Include="Models\ShowModels\ShooterCompetitionOverview.cs" />
     <Compile Include="Models\CompetitionModel.cs" />
     <Compile Include="Models\RunModel.cs" />
     <Compile Include="Models\ShooterModel.cs" />
-    <Compile Include="Models\ShowModels\StatsAtStageOverview.cs" />
+    <Compile Include="Models\ShowModels\ShooterStatsOnStageOverview.cs" />
     <Compile Include="Models\StageModel.cs" />
     <Compile Include="Models\TargetModel.cs" />
-    <Compile Include="Models\ComplexModels\ShowSelectedCompetitionModel.cs" />
+    <Compile Include="Models\ComplexModels\ShowCompetitionModel.cs" />
     <Compile Include="Models\ViewTypeEnum.cs" />
     <Compile Include="Properties\Resources.pl-PL.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -177,14 +177,14 @@
     <Compile Include="ViewModels\EditStagesViewModel.cs" />
     <Compile Include="ViewModels\EditShootersViewModel.cs" />
     <Compile Include="ViewModels\ShowCompetitionsViewModel.cs" />
-    <Compile Include="ViewModels\ShowSelectedCompetitionViewModel.cs" />
-    <Compile Include="ViewModels\ShowSelectedStageViewModel.cs" />
+    <Compile Include="ViewModels\ShowCompetitionViewModel.cs" />
+    <Compile Include="ViewModels\ShowStageViewModel.cs" />
     <Compile Include="ViewModels\ShowShooterOnStageViewModel.cs" />
-    <Compile Include="ViewModels\ShowSelectedShooterInCompetitionViewModel.cs" />
+    <Compile Include="ViewModels\ShowShooterInCompetitionViewModel.cs" />
     <Compile Include="ViewModels\ShowShootersViewModel.cs" />
-    <Compile Include="ViewModels\ShowSelectedShooterViewModel.cs" />
-    <Compile Include="Views\ShowSelectedCompetitionView.xaml.cs">
-      <DependentUpon>ShowSelectedCompetitionView.xaml</DependentUpon>
+    <Compile Include="ViewModels\ShowShooterViewModel.cs" />
+    <Compile Include="Views\ShowCompetitionView.xaml.cs">
+      <DependentUpon>ShowCompetitionView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\EditShootersView.xaml.cs">
       <DependentUpon>EditShootersView.xaml</DependentUpon>
@@ -192,8 +192,8 @@
     <Compile Include="Views\ConnectionView.xaml.cs">
       <DependentUpon>ConnectionView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\ShowSelectedShooterView.xaml.cs">
-      <DependentUpon>ShowSelectedShooterView.xaml</DependentUpon>
+    <Compile Include="Views\ShowShooterView.xaml.cs">
+      <DependentUpon>ShowShooterView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\EditCompetitionsView.xaml.cs">
       <DependentUpon>EditCompetitionsView.xaml</DependentUpon>
@@ -207,14 +207,14 @@
     <Compile Include="Views\EditStagesView.xaml.cs">
       <DependentUpon>EditStagesView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\ShowSelectedStageView.xaml.cs">
-      <DependentUpon>ShowSelectedStageView.xaml</DependentUpon>
+    <Compile Include="Views\ShowStageView.xaml.cs">
+      <DependentUpon>ShowStageView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ShowShooterOnStageView.xaml.cs">
       <DependentUpon>ShowShooterOnStageView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\ShowSelectedShooterInCompetition.xaml.cs">
-      <DependentUpon>ShowSelectedShooterInCompetition.xaml</DependentUpon>
+    <Compile Include="Views\ShowShooterInCompetition.xaml.cs">
+      <DependentUpon>ShowShooterInCompetition.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ShowShootersView.xaml.cs">
       <DependentUpon>ShowShootersView.xaml</DependentUpon>
@@ -231,7 +231,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Views\ShowSelectedCompetitionView.xaml">
+    <Page Include="Views\ShowCompetitionView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -247,7 +247,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\ShowSelectedShooterView.xaml">
+    <Page Include="Views\ShowShooterView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -263,7 +263,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\ShowSelectedStageView.xaml">
+    <Page Include="Views\ShowStageView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -271,7 +271,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\ShowSelectedShooterInCompetition.xaml">
+    <Page Include="Views\ShowShooterInCompetition.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
